--- a/stacks/shared-vpc/interface-endpoints.yml
+++ b/stacks/shared-vpc/interface-endpoints.yml
@@ -48,16 +48,12 @@ Resources:
           IpProtocol: tcp
           ToPort: 443
       Tags:
-        - Key: Project
-          Value: platform.prx.org # TODO
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub ${RootStackName}_shared-vpc_ecs-interface-access
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: Name, Value: !Sub "${RootStackName}_shared-vpc_ecs-interface-access" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       VpcId: !Ref VpcId
 
   EcsLaunchEndpointsInboundTrafficSecurityGroup:
@@ -73,14 +69,12 @@ Resources:
         to flow into VPC Endpoints for AWS services required for launching ECS
         tasks and services in ${EnvironmentType}
       Tags:
-        - Key: Project
-          Value: Porter # TODO
-        - Key: Name
-          Value: !Sub ${RootStackName}_shared-vpc_ecs-interface-inbound
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: Name, Value: !Sub "${RootStackName}_shared-vpc_ecs-interface-inbound" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       VpcId: !Ref VpcId
   EcsLaunchEndpointsInboundTrafficSecurityGroupIngress:
     Type: AWS::EC2::SecurityGroupIngress
@@ -106,16 +100,12 @@ Resources:
           IpProtocol: tcp
           ToPort: 443
       Tags:
-        - Key: Project
-          Value: platform.prx.org # TODO
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub ${RootStackName}_shared-vpc_kms-interface-access
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: Name, Value: !Sub "${RootStackName}_shared-vpc_kms-interface-access" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       VpcId: !Ref VpcId
 
   KmsEndpointInboundTrafficSecurityGroup:
@@ -125,14 +115,12 @@ Resources:
         Allows HTTPS traffic from the KmsEndpointAccessSecurityGroup
         to flow into the KMS VPC Endpoint in ${EnvironmentType}
       Tags:
-        - Key: Project
-          Value: Porter # TODO
-        - Key: Name
-          Value: !Sub ${RootStackName}_shared-vpc_kms-interface-inbound
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: Name, Value: !Sub "${RootStackName}_shared-vpc_kms-interface-inbound" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       VpcId: !Ref VpcId
   KmsEndpointInboundTrafficSecurityGroupIngress:
     Type: AWS::EC2::SecurityGroupIngress
