--- a/stacks/shared-vpc/private-subnets.yml
+++ b/stacks/shared-vpc/private-subnets.yml
@@ -26,16 +26,12 @@ Resources:
     Properties:
       VpcId: !Ref VpcId
       Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub ${RootStackName}_shared_private
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: Name, Value: !Sub "${RootStackName}_shared_private" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
   # Private subnets
   PrivateSubnet1:
@@ -47,19 +43,16 @@ Resources:
       CidrBlock: !Select [3, !Cidr [!Ref VpcCidrBlock, 16, 12]]
       Ipv6CidrBlock: !Select [3, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 16, 64]]
       Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
         - Key: Name
           Value:
             Fn::Sub:
               - ${RootStackName}_shared_private-1_${ZoneName}
               - ZoneName: !Select [0, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       VpcId: !Ref VpcId
   PrivateSubnet1RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
@@ -81,19 +74,16 @@ Resources:
       CidrBlock: !Select [4, !Cidr [!Ref VpcCidrBlock, 16, 12]]
       Ipv6CidrBlock: !Select [4, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 16, 64]]
       Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
         - Key: Name
           Value:
             Fn::Sub:
               - ${RootStackName}_shared_private-2_${ZoneName}
               - ZoneName: !Select [1, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       VpcId: !Ref VpcId
   PrivateSubnet2RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
@@ -115,19 +105,16 @@ Resources:
       CidrBlock: !Select [5, !Cidr [!Ref VpcCidrBlock, 16, 12]]
       Ipv6CidrBlock: !Select [5, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 16, 64]]
       Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
         - Key: Name
           Value:
             Fn::Sub:
               - ${RootStackName}_shared_private-3_${ZoneName}
               - ZoneName: !Select [2, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
       VpcId: !Ref VpcId
   PrivateSubnet3RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
