Configure ECS task tag propagation

--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -147,6 +147,7 @@ Resources:
         - ContainerName: !Ref kWebContainerName
           ContainerPort: !Ref kApplicationPort
           TargetGroupArn: !Ref TargetGroup
+      PropagateTags: TASK_DEFINITION
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -167,6 +168,7 @@ Resources:
         - ContainerName: !Ref kWorkerContainerName
           ContainerPort: !Ref kApplicationPort
           TargetGroupArn: !Ref TargetGroup
+      PropagateTags: TASK_DEFINITION
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
