--- a/stacks/provisioned/exchange.yml
+++ b/stacks/provisioned/exchange.yml
@@ -226,6 +226,7 @@ Resources:
         - ContainerName: !Ref kWebContainerName
           ContainerPort: !Ref kWebApplicationPort
           TargetGroupArn: !Ref WebTargetGroup
+      PropagateTags: TASK_DEFINITION
       Tags:
         - Key: Project
           Value: Metrics # TODO
@@ -379,6 +380,7 @@ Resources:
         MinimumHealthyPercent: 50
       DesiredCount: !If [IsProduction, 6, 1]
       LaunchType: EC2
+      PropagateTags: TASK_DEFINITION
       Tags:
         - Key: Project
           Value: Metrics # TODO
@@ -546,6 +548,7 @@ Resources:
         MinimumHealthyPercent: 50
       DesiredCount: 1
       LaunchType: EC2
+      PropagateTags: TASK_DEFINITION
       Tags:
         - Key: Project
           Value: Metrics # TODO
