--- a/stacks/provisioned/augury.yml
+++ b/stacks/provisioned/augury.yml
@@ -163,6 +163,7 @@ Resources:
         - ContainerName: !Ref kWebContainerName
           ContainerPort: !Ref kApplicationPort
           TargetGroupArn: !Ref TargetGroup
+      PropagateTags: TASK_DEFINITION
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -184,6 +185,7 @@ Resources:
         - ContainerName: !Ref kWorkerContainerName
           ContainerPort: !Ref kApplicationPort
           TargetGroupArn: !Ref TargetGroup
+      PropagateTags: TASK_DEFINITION
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
