--- a/stacks/provisioned/feeder.yml
+++ b/stacks/provisioned/feeder.yml
@@ -387,6 +387,7 @@ Resources:
         - ContainerName: !Ref kWebContainerName
           ContainerPort: !Ref kWebApplicationPort
           TargetGroupArn: !Ref WebTargetGroup
+      PropagateTags: TASK_DEFINITION
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -455,6 +456,7 @@ Resources:
         MinimumHealthyPercent: 50
       DesiredCount: !If [IsProduction, 1, 1]
       LaunchType: EC2
+      PropagateTags: TASK_DEFINITION
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
