--- a/stacks/provisioned/remix.yml
+++ b/stacks/provisioned/remix.yml
@@ -161,6 +161,7 @@ Resources:
         - ContainerName: !Ref kWebContainerName
           ContainerPort: !Ref kApplicationPort
           TargetGroupArn: !Ref TargetGroup
+      PropagateTags: TASK_DEFINITION
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
