Add ECS managed tags to services

--- a/stacks/provisioned/augury.yml
+++ b/stacks/provisioned/augury.yml
@@ -158,6 +158,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: 2
+      EnableECSManagedTags: true
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kWebContainerName
@@ -180,6 +181,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: 2
+      EnableECSManagedTags: true
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kWorkerContainerName
