--- a/stacks/provisioned/castle.yml
+++ b/stacks/provisioned/castle.yml
@@ -107,6 +107,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: 2
+      EnableECSManagedTags: true
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kContainerName
