--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -142,6 +142,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: 2
+      EnableECSManagedTags: true
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kWebContainerName
@@ -163,6 +164,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: 2 # TODO
+      EnableECSManagedTags: true
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kWorkerContainerName
