--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -141,6 +141,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: 2
+      EnableECSManagedTags: true
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kWebContainerName
@@ -440,6 +441,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: 0
+      EnableECSManagedTags: true
       LoadBalancers:
         - ContainerName: !Ref kSphinxContainerName
           ContainerPort: !Ref kWebApplicationPort
