--- a/stacks/provisioned/exchange.yml
+++ b/stacks/provisioned/exchange.yml
@@ -221,6 +221,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: !If [IsProduction, 5, 2]
+      EnableECSManagedTags: true
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kWebContainerName
@@ -314,6 +315,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: !If [IsProduction, 6, 1]
+      EnableECSManagedTags: true
       LaunchType: EC2
       PropagateTags: TASK_DEFINITION
       Tags:
@@ -481,6 +483,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: 1
+      EnableECSManagedTags: true
       LaunchType: EC2
       PropagateTags: TASK_DEFINITION
       Tags:
