--- a/stacks/provisioned/feeder.yml
+++ b/stacks/provisioned/feeder.yml
@@ -382,6 +382,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: !If [IsProduction, 5, 2]
+      EnableECSManagedTags: true
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kWebContainerName
@@ -455,6 +456,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: !If [IsProduction, 1, 1]
+      EnableECSManagedTags: true
       LaunchType: EC2
       PropagateTags: TASK_DEFINITION
       Tags:
