--- a/stacks/provisioned/publish.yml
+++ b/stacks/provisioned/publish.yml
@@ -108,6 +108,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: !If [IsProduction, 2, 1]
+      EnableECSManagedTags: true
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kContainerName
