--- a/stacks/provisioned/styleguide.yml
+++ b/stacks/provisioned/styleguide.yml
@@ -102,6 +102,7 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: 1
+      EnableECSManagedTags: true
       LaunchType: EC2
       LoadBalancers:
         - ContainerName: !Ref kContainerName
