Add stack output

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -24,7 +24,7 @@ Parameters:
     AllowedValues:
       - Complete
       - Incomplete
-    Default: Complete # TODO Default should be disabled
+    Default: Complete # TODO Default should be Incomplete
   # Required
   AwsOrganizationId:
     Type: String
@@ -1040,6 +1040,9 @@ Resources:
       TimeoutInMinutes: 40
 
 Outputs:
+  PipelineExecutionNonce:
+    Value: !Ref PipelineExecutionNonce
+
   VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
     Value: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
