Block public access to ALB logs bucket

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -169,12 +169,14 @@ Resources:
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
     Properties:
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
       LifecycleConfiguration:
         Rules:
-          - ExpirationInDays: !If
-              - IsProduction
-              - 14
-              - 3
+          - ExpirationInDays: !If [IsProduction, 14, 3]
             Status: Enabled
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
